--- a/GUI/test-pyweb/frontend/index.html
+++ b/GUI/test-pyweb/frontend/index.html
@@ -12,7 +12,7 @@
     <link rel="apple-touch-icon" href="/static/logo192.png" />
     <link rel="manifest" href="/static/manifest.json" />
     <title>React App</title>
-    <link href="/static/css/main.0c43073c.chunk.css" rel="stylesheet" />
+    <link href="/static/css/main.8275f142.chunk.css" rel="stylesheet" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -21,39 +21,39 @@
       !(function (e) {
         function t(t) {
           for (
-            var n, i, a = t[0], c = t[1], l = t[2], f = 0, s = [];
-            f < a.length;
-            f++
+            var n, a, i = t[0], c = t[1], l = t[2], p = 0, s = [];
+            p < i.length;
+            p++
           )
-            (i = a[f]),
-              Object.prototype.hasOwnProperty.call(o, i) &&
-                o[i] &&
-                s.push(o[i][0]),
-              (o[i] = 0);
+            (a = i[p]),
+              Object.prototype.hasOwnProperty.call(o, a) &&
+                o[a] &&
+                s.push(o[a][0]),
+              (o[a] = 0);
           for (n in c)
             Object.prototype.hasOwnProperty.call(c, n) && (e[n] = c[n]);
-          for (p && p(t); s.length; ) s.shift()();
+          for (f && f(t); s.length; ) s.shift()();
           return u.push.apply(u, l || []), r();
         }
         function r() {
           for (var e, t = 0; t < u.length; t++) {
-            for (var r = u[t], n = !0, a = 1; a < r.length; a++) {
-              var c = r[a];
+            for (var r = u[t], n = !0, i = 1; i < r.length; i++) {
+              var c = r[i];
               0 !== o[c] && (n = !1);
             }
-            n && (u.splice(t--, 1), (e = i((i.s = r[0]))));
+            n && (u.splice(t--, 1), (e = a((a.s = r[0]))));
           }
           return e;
         }
         var n = {},
           o = { 1: 0 },
           u = [];
-        function i(t) {
+        function a(t) {
           if (n[t]) return n[t].exports;
           var r = (n[t] = { i: t, l: !1, exports: {} });
-          return e[t].call(r.exports, r, r.exports, i), (r.l = !0), r.exports;
+          return e[t].call(r.exports, r, r.exports, a), (r.l = !0), r.exports;
         }
-        (i.e = function (e) {
+        (a.e = function (e) {
           var t = [],
             r = o[e];
           if (0 !== r)
@@ -64,23 +64,23 @@
               });
               t.push((r[2] = n));
               var u,
-                a = document.createElement("script");
-              (a.charset = "utf-8"),
-                (a.timeout = 120),
-                i.nc && a.setAttribute("nonce", i.nc),
-                (a.src = (function (e) {
+                i = document.createElement("script");
+              (i.charset = "utf-8"),
+                (i.timeout = 120),
+                a.nc && i.setAttribute("nonce", a.nc),
+                (i.src = (function (e) {
                   return (
-                    i.p +
+                    a.p +
                     "static/js/" +
                     ({}[e] || e) +
                     "." +
-                    { 3: "534426bb" }[e] +
+                    { 3: "65feaaed" }[e] +
                     ".chunk.js"
                   );
                 })(e));
               var c = new Error();
               u = function (t) {
-                (a.onerror = a.onload = null), clearTimeout(l);
+                (i.onerror = i.onload = null), clearTimeout(l);
                 var r = o[e];
                 if (0 !== r) {
                   if (r) {
@@ -103,35 +103,35 @@
                 }
               };
               var l = setTimeout(function () {
-                u({ type: "timeout", target: a });
+                u({ type: "timeout", target: i });
               }, 12e4);
-              (a.onerror = a.onload = u), document.head.appendChild(a);
+              (i.onerror = i.onload = u), document.head.appendChild(i);
             }
           return Promise.all(t);
         }),
-          (i.m = e),
-          (i.c = n),
-          (i.d = function (e, t, r) {
-            i.o(e, t) ||
+          (a.m = e),
+          (a.c = n),
+          (a.d = function (e, t, r) {
+            a.o(e, t) ||
               Object.defineProperty(e, t, { enumerable: !0, get: r });
           }),
-          (i.r = function (e) {
+          (a.r = function (e) {
             "undefined" != typeof Symbol &&
               Symbol.toStringTag &&
               Object.defineProperty(e, Symbol.toStringTag, { value: "Module" }),
               Object.defineProperty(e, "__esModule", { value: !0 });
           }),
-          (i.t = function (e, t) {
-            if ((1 & t && (e = i(e)), 8 & t)) return e;
+          (a.t = function (e, t) {
+            if ((1 & t && (e = a(e)), 8 & t)) return e;
             if (4 & t && "object" == typeof e && e && e.__esModule) return e;
             var r = Object.create(null);
             if (
-              (i.r(r),
+              (a.r(r),
               Object.defineProperty(r, "default", { enumerable: !0, value: e }),
               2 & t && "string" != typeof e)
             )
               for (var n in e)
-                i.d(
+                a.d(
                   r,
                   n,
                   function (t) {
@@ -140,7 +140,7 @@
                 );
             return r;
           }),
-          (i.n = function (e) {
+          (a.n = function (e) {
             var t =
               e && e.__esModule
                 ? function () {
@@ -149,25 +149,25 @@
                 : function () {
                     return e;
                   };
-            return i.d(t, "a", t), t;
+            return a.d(t, "a", t), t;
           }),
-          (i.o = function (e, t) {
+          (a.o = function (e, t) {
             return Object.prototype.hasOwnProperty.call(e, t);
           }),
-          (i.p = "/"),
-          (i.oe = function (e) {
+          (a.p = "/"),
+          (a.oe = function (e) {
             throw (console.error(e), e);
           });
-        var a = (this["webpackJsonpreact-typescript"] =
+        var i = (this["webpackJsonpreact-typescript"] =
             this["webpackJsonpreact-typescript"] || []),
-          c = a.push.bind(a);
-        (a.push = t), (a = a.slice());
-        for (var l = 0; l < a.length; l++) t(a[l]);
-        var p = c;
+          c = i.push.bind(i);
+        (i.push = t), (i = i.slice());
+        for (var l = 0; l < i.length; l++) t(i[l]);
+        var f = c;
         r();
       })([]);
     </script>
-    <script src="/static/js/2.225e9b1c.chunk.js"></script>
-    <script src="/static/js/main.c0e74ff0.chunk.js"></script>
+    <script src="/static/js/2.d5af519e.chunk.js"></script>
+    <script src="/static/js/main.a69d61b2.chunk.js"></script>
   </body>
 </html>
