--- a/GUI/test-pyweb/public/index.html
+++ b/GUI/test-pyweb/public/index.html
@@ -8,6 +8,10 @@
     <link rel="apple-touch-icon" href="./logo192.png" />
     <link rel="manifest" href="./manifest.json" />
 
+    <script>
+      window.SERVER_DATA = { token: "{{ token }}" };
+    </script>
+
     <title>React App</title>
   </head>
   <body>
